src/objects/appsolutely__Creditsafe_Address__c.object
<CustomObject>
    <description>A creditsafe address of the business</description>
    <fields>
        <fullName>appsolutely__City__c</fullName>
        <description>The City of the Address.</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Country__c</fullName>
        <description>The Country of the Address.</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Creditsafe_Company_Report_Full__c</fullName>
        <description>A detailed report about a company.</description>
        <label>Creditsafe Company Report</label>
        <referenceTo>appsolutely__Creditsafe_Company_Report_Full__c</referenceTo>
        <relationshipLabel>Creditsafe Addresses</relationshipLabel>
        <relationshipName>Creditsafe_Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>appsolutely__Full_Address__c</fullName>
        <description>Full Address</description>
        <label>Full Address</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>appsolutely__House_Number_Addition__c</fullName>
        <description>The House number addition of the Address.</description>
        <label>House Number Addition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__House_Number__c</fullName>
        <description>The House number of the Address.</description>
        <label>House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Postcode__c</fullName>
        <description>The Postcode of the Address.</description>
        <label>Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Street__c</fullName>
        <description>The Street of the Address.</description>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Telephone__c</fullName>
        <description>Phone number.</description>
        <label>Telephone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Type__c</fullName>
        <description>Type of the address</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Creditsafe Address</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Creditsafe Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creditsafe Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>